--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -265,7 +265,7 @@ button:hover{
     }
 
     .headerItem {
-        padding: 0.5rem 0rem;
+        padding: 0.75rem 0rem;
        
     }
 
@@ -277,6 +277,7 @@ button:hover{
     .headerLink {
         text-decoration: none;
         color: black; 
+        padding: 0.5rem;
         
     }
 
