--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -48,8 +48,9 @@ li {
 /*Comienzan estilos header y barra de busqueda*/
 
 .headerContainer {
+    position: fixed;
     background-color: #efc234;
-    width: auto;
+    width: 100%;
     color: black;
     display: flex;
     flex-direction: row;
@@ -79,16 +80,48 @@ li {
 }
 
 .headerUl {
+    position: fixed;
+    top: 80px;
+    background-color: #efc234;
+    width: 100%;
+    height: 50vh;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
     display: none;
+    list-style: none;
 }
 
+.headerLink {
+    text-decoration: none;
+    color: black;
+    font-size: 1.25rem;
+}
 
+.headerLink:hover {
+    background-color: black;
+    color: #efc234;
+}
+
+.headerInput:checked+.headerUl {
+    display: flex;
+}
+
+.headerLabel {
+    display: block;
+    cursor: pointer;
+}
+
+.headerInput {
+    display: none;
+}
 
 .searchContainer {
     height: 4rem;
     background-color: #e8ce79;
     text-align: center;
     padding-top: 1rem;
+    margin-top: 5rem;
 }
 
 .searchContainer select {
@@ -148,7 +181,8 @@ button {
     width: 10rem;
     height: auto;
 }
-button:hover{
+
+button:hover {
     background-color: #e8ce79;
 }
 
@@ -179,12 +213,10 @@ button:hover{
     padding: 0.5em 0.5em 0.5em 0.5em;
     background-color: #efc234;
     opacity: 80%;
-
 }
 
 .pageItem:hover {
     background-color: #e8ce79;
-
 }
 
 .pageLink {
@@ -228,8 +260,10 @@ button:hover{
     }
 
     .headerContainer {
+        position: unset;
         flex-direction: column;
         height: auto;
+        width: auto;
         padding-top: 1rem;
         align-items: center;
         justify-content: start;
@@ -262,23 +296,23 @@ button:hover{
         align-items: center;
         justify-content: center;
         text-align: center;
+        height: auto;
+        position: unset;
     }
 
     .headerItem {
         padding: 0.75rem 0rem;
-       
     }
 
-    .headerLink:hover{
+    .headerLink:hover {
         background-color: black;
         color: #efc234;
     }
 
     .headerLink {
         text-decoration: none;
-        color: black; 
+        color: black;
         padding: 0.5rem;
-        
     }
 
     .mainContainer {
@@ -307,6 +341,10 @@ button:hover{
     .searchContainer select {
         height: 2rem;
         width: 95%;
+    }
+
+    .searchContainer {
+        margin-top: 0rem;
     }
 
 }
